testdata/golden/sema/valid/pragma_directive_simple.sg
pragma directive
// scenario: pragma directive at file start with minimal body

fn directive_stub() -> nothing {
    return nothing;
}
