testdata/golden/sema/invalid/alien_hints/rust_implicit_return.sg
// scenario: function ends with expression matching return type but missing semicolon
fn rusty(flag: bool) -> int {
    if (flag) {
        return 1;
    }
    2
}
